--- a/src/styles/components/CalendarEvent.less
+++ b/src/styles/components/CalendarEvent.less
@@ -162,7 +162,7 @@
     background: @primary-blue;
     border-color: @border-blue;
     border-radius: 6px;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
       background-color: @highlight-blue !important;
