--- a/src/styles/components/Slider.less
+++ b/src/styles/components/Slider.less
@@ -75,4 +75,12 @@
   .ant-menu-item-selected a:hover {
     color: #00a700 !important;
   }
+
+  .ant-menu-sub.ant-menu-inline {
+    padding: 0;
+    background: #ce0000 !important;
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+  }
 }
