--- a/src/styles/components/BlogList.less
+++ b/src/styles/components/BlogList.less
@@ -1,5 +1,5 @@
 .blog-style {
-  img {
+  .img {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -13,7 +13,7 @@
     background: rgb(255, 255, 255);
     border-color: #91c7dd;
     border-radius: 6px;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
       background-color: #42aad3 !important;
@@ -29,7 +29,7 @@
     background: #4694b4;
     border-color: #91c7dd;
     border-radius: 6px;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
       background-color: #42aad3 !important;
@@ -44,7 +44,7 @@
     color: #4694b4;
     background: white;
     border-color: #91c7dd;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
       background: #91c7dd !important;
@@ -58,7 +58,7 @@
     color: #fff;
     background: #c3272b;
     border-color: #ff4f55;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
     border-radius: 6px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
