--- a/src/styles/components/OrderAntD.less
+++ b/src/styles/components/OrderAntD.less
@@ -31,7 +31,7 @@
     color: #fff;
     background: #ff4d4f;
     border-color: #ffa0a1;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
     border-radius: 6px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
