--- a/src/styles/components/Shop.less
+++ b/src/styles/components/Shop.less
@@ -4,7 +4,7 @@
     background: #ffffff;
     border-color: #91c7dd;
     border-radius: 6px;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
   }
 
@@ -24,7 +24,7 @@
     color: #fff;
     background: #c3272b;
     border-color: #ff4d4f;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
     border-radius: 6px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
@@ -34,7 +34,7 @@
     color: #4694b4;
     background: white;
     border-color: #91c7dd;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
   }
 
@@ -67,7 +67,7 @@
     background: #ffffff00 !important;
     border-color: #aaaaaa !important;
     border-radius: 12px !important;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%) !important;
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%) !important;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4) !important;
     position: relative;
     top: -2px;
@@ -78,7 +78,7 @@
     background: #4694b4;
     border-color: #91c7dd;
     border-radius: 6px;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
   }
 
@@ -98,7 +98,7 @@
     color: #fff;
     background: #c3272b;
     border-color: #bb8b8b;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
     border-radius: 6px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
@@ -108,7 +108,7 @@
     color: #4694b4;
     background: white;
     border-color: #91c7dd;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
   }
 
