--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -39,7 +39,7 @@
     background: rgb(255, 255, 255);
     border-color: @border-blue;
     border-radius: 6px;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
       background-color: @highlight-blue !important;
@@ -65,7 +65,7 @@
     color: #fff;
     background: @primary-red;
     border-color: @border-red;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
     border-radius: 6px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
@@ -102,7 +102,7 @@
     background: @primary-blue;
     border-color: @border-blue;
     border-radius: 6px;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
       background-color: @highlight-blue !important;
@@ -128,7 +128,7 @@
     color: @primary-blue;
     background: white;
     border-color: @border-blue;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
       background: @border-blue !important;
@@ -142,7 +142,7 @@
     color: #fff;
     background: @primary-red;
     border-color: @border-red;
-    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    //text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
     -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
     border-radius: 6px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
@@ -174,9 +174,11 @@
 
   .ant-btn-icon-only.ant-btn-sm {
     color: #fff;
-    margin-right: 10px;
+    margin-right: 0px;
+    height: 30px;
     background: white;
     border-color: rgb(182, 182, 182);
+    box-shadow: none;
   }
 
   .ant-tabs-tab {
@@ -194,6 +196,14 @@
     font-size: large;
     outline: none;
     cursor: pointer;
+  }
+
+  .ant-menu-sub.ant-menu-inline {
+    padding: 0;
+    background: #ffffff;
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
   }
 
   .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu:hover,
@@ -312,9 +322,9 @@
   }
 
   .ant-collapse > .ant-collapse-item > .ant-collapse-header {
-    position: relative;
+    display: flex;
     padding: 12px 16px;
-    padding-left: 40px;
+    padding-left: 20px;
     color: rgba(0, 0, 0, 0.85);
     line-height: 1.5715;
     cursor: pointer;
@@ -630,5 +640,13 @@
 
   .ant-pagination-item-active a {
     color: @primary-blue;
+  }
+
+  .ant-input-group .ant-input {
+    float: left;
+    width: 100%;
+    margin-bottom: 0;
+    text-align: inherit;
+    height: 30px;
   }
 }
