--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   background-image: url("img/BackgroundThree.jpg");
   background-position: "center";
   background-size: "cover";
   background-repeat: "no-repeat";
-}
+} */
