--- a/src/styles/components/index.less
+++ b/src/styles/components/index.less
@@ -1,15 +1,13 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
+//body {
+//  margin: 0;
+//  padding: 0;
+//  font-family: sans-serif;
+//}
 
-.container {
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+body {
+  max-width: 1080px;
+  margin: 0 auto !important;
+  float: none !important;
 }
 
 @media (max-width: 768px) {
