Start Home Design

--- a/src/styles/components/Home.less
+++ b/src/styles/components/Home.less
@@ -1,78 +1,211 @@
-.container {
-  position: relative;
-  width: 100%;
-  max-width: 100%;
-}
+.home-style {
+  .container-intro {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+  }
 
-.container h2 {
-  position: absolute;
-  top: 80px;
-  left: 0;
-  width: 100%;
-  line-height: 20px;
-  padding: 20px;
-  text-align: justify;
-}
+  .container-intro h1 {
+    position: absolute;
+    top: 10px;
+    width: 100%;
+    text-align: center;
 
-.container h2 span {
-  color: white;
-  font: bold 20px/45px Helvetica, Sans-Serif;
-  letter-spacing: 0px;
-  line-height: 30px;
+    color: rgb(243, 243, 243);
+    font: bold 36px/45px Helvetica, Sans-Serif;
+    letter-spacing: 0px;
 
-  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6), 0px 0px 30px rgba(0, 0, 0, 0.4);
-}
+    text-shadow: 0px 0px 10px rgba(156, 156, 156, 0.6),
+      0px 0px 30px rgba(131, 131, 131, 0.4);
+  }
 
-.container h1 {
-  position: absolute;
-  top: 20px;
-  left: 0;
-  width: 100%;
-  line-height: 20px;
-  padding: 20px;
-  text-align: justify;
+  .container-intro h2 {
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    text-align: center;
 
-  color: white;
-  font: bold 32px/45px Helvetica, Sans-Serif;
-  letter-spacing: 0px;
-  line-height: 30px;
+    color: rgb(243, 243, 243);
+    font: bold 24px/45px Helvetica, Sans-Serif;
+    letter-spacing: 0px;
 
-  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6), 0px 0px 30px rgba(0, 0, 0, 0.4);
-}
+    text-shadow: 0px 0px 10px rgba(156, 156, 156, 0.6),
+      0px 0px 30px rgba(131, 131, 131, 0.4);
+  }
 
-.container img {
-  width: 100%;
-  height: auto;
-  border-radius: 0px 0px 0px 0px;
-}
+  .container-intro img {
+    width: 100%;
+    height: auto;
+    border-radius: 0px 0px 0px 0px;
+  }
 
-.container .btn {
-  position: absolute;
-  top: 75%;
-  left: 25%;
-  line-height: 30px;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  padding: 0px 15px;
-  cursor: pointer;
+  .container-intro .btn {
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    line-height: 30px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    padding: 6px 10px;
+    width: 200px;
+    cursor: pointer;
 
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  border-radius: 4px;
-  border: 3px solid white;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    border-radius: 4px;
+    border: 3px solid white;
 
-  background-color: #008cba;
+    background-color: #008bba36;
 
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
+      0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
 
-.container .btn:hover {
-  background-color: #00abe4;
-  color: white;
+  .container-intro .btn:hover {
+    background-color: #00abe4b4;
+    color: white;
 
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+      0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
+
+  .container-heading {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .container-heading h1 {
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    text-align: center;
+
+    color: rgb(255, 255, 255);
+    font: bold 32px/45px Helvetica, Sans-Serif;
+    letter-spacing: 0px;
+
+    text-shadow: 0px 0px 10px rgb(0, 0, 0), 0px 0px 20px rgb(0, 0, 0);
+  }
+
+  .container-heading h2 {
+    position: absolute;
+    top: 10px;
+    width: 100%;
+    text-align: center;
+
+    color: rgb(255, 255, 255);
+    font: bold 28px/45px Helvetica, Sans-Serif;
+    letter-spacing: 0px;
+
+    text-shadow: 0px 0px 10px rgb(0, 0, 0), 0px 0px 20px rgb(0, 0, 0);
+  }
+
+  .container-heading img {
+    width: 100%;
+    height: auto;
+    border-radius: 0px 0px 0px 0px;
+  }
+
+  .container-heading .btn {
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    line-height: 30px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    padding: 6px 10px;
+    width: 200px;
+    cursor: pointer;
+
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    border-radius: 4px;
+    border: 3px solid white;
+
+    background-color: #008bba36;
+
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
+      0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
+  .container-heading .btn:hover {
+    background-color: #00abe4b4;
+    color: white;
+
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+      0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
+
+  .container-third {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .container-third h1 {
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    text-align: center;
+
+    color: rgb(255, 255, 255);
+    font: bold 32px/45px Helvetica, Sans-Serif;
+    letter-spacing: 0px;
+
+    text-shadow: 0px 0px 10px rgb(0, 0, 0), 0px 0px 20px rgb(0, 0, 0);
+  }
+
+  .container-third h2 {
+    position: absolute;
+    top: 10px;
+    width: 100%;
+    text-align: center;
+
+    color: rgb(255, 255, 255);
+    font: bold 28px/45px Helvetica, Sans-Serif;
+    letter-spacing: 0px;
+
+    text-shadow: 0px 0px 10px rgb(0, 0, 0), 0px 0px 20px rgb(0, 0, 0);
+  }
+
+  .container-third img {
+    width: 100%;
+    height: auto;
+    border-radius: 0px 0px 0px 0px;
+  }
+
+  .container-sessions {
+    position: relative;
+    display: grid;
+    //border: 1px solid darkgray;
+    border-radius: 10px;
+    background-color: rgb(245, 245, 245);
+    margin: 4px;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
+  .container-sessions h1 {
+    top: 10px;
+    width: 100%;
+    text-align: center;
+    letter-spacing: 1px;
+    color: rgb(49, 49, 49);
+    font: bold 24px/45px Helvetica, Sans-Serif;
+  }
+
+  .container-sessions p {
+    width: 100%;
+    text-align: center;
+
+    color: rgb(56, 56, 56);
+    font: bold 18px/18px Helvetica, Sans-Serif;
+    letter-spacing: 0px;
+  }
 }
