--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -401,6 +401,10 @@
     border-color: @primary-blue;
   }
 
+  .ant-switch {
+    margin-left: 4px;
+  }
+
   .ant-switch-checked {
     background-color: @highlight-blue;
   }
@@ -431,7 +435,7 @@
 
   .ant-select {
     background-color: @highlight-blue;
-    margin-left: 8px;
+    margin-left: 0px;
   }
 
   .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
