--- a/src/styles/components/Shop.css
+++ b/src/styles/components/Shop.css
@@ -10,7 +10,8 @@ img {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  border-radius: 4px 4px 4px 4px;
+  left: 0px;
+  border-radius: 4px 4px 0px 0px;
 }
 
 .product-detail-options-container {
