--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -286,7 +286,8 @@
     display: inline-block;
     -ms-flex: 1 1;
     flex: 1 1;
-    padding: 1px 0;
+    padding: 0px 0px;
+    padding-right: 10px;
     overflow: hidden;
     white-space: nowrap;
     -o-text-overflow: ellipsis;
@@ -483,7 +484,7 @@
 
   .ant-card-cover img {
     border-radius: 10px 10px 0px 0px;
-    margin-left: 1px;
+    margin-left: 0px;
     //min-height: 170px;
     //max-height: 170px;
   }
