--- a/src/styles/components/Budget.less
+++ b/src/styles/components/Budget.less
@@ -1,123 +1,125 @@
-.ant-collapse {
-  box-sizing: border-box;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 0px;
-  color: rgba(0, 0, 0, 0.85);
-  background-color: white !important;
-  font-size: 20px;
-  font-variant: tabular-nums;
-  line-height: 1.5715;
-  list-style: none;
-  font-feature-settings: "tnum", "tnum";
-  background-color: #fafafa;
-  border: none;
-  border-radius: 10px;
-}
+.budget-style {
+  .ant-collapse {
+    box-sizing: border-box;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 0px;
+    color: rgba(0, 0, 0, 0.85);
+    background-color: white !important;
+    font-size: 20px;
+    font-variant: tabular-nums;
+    line-height: 1.5715;
+    list-style: none;
+    font-feature-settings: "tnum", "tnum";
+    background-color: #fafafa;
+    border: none;
+    border-radius: 10px;
+  }
 
-.ant-collapse > .ant-collapse-item {
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.4), 0 2px 5px 0 rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  margin-bottom: 10px;
-}
+  .ant-collapse > .ant-collapse-item {
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.4), 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
 
-.ant-collapse > .ant-collapse-item:last-child {
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.4), 0 2px 5px 0 rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  margin-bottom: 10px;
-}
+  .ant-collapse > .ant-collapse-item:last-child {
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.4), 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
 
-.ant-collapse > .ant-collapse-item > .ant-collapse-header {
-  position: relative;
-  padding: 10px 10px;
-  color: rgba(0, 0, 0, 0.85);
-  line-height: 1.5715;
-  cursor: pointer;
-  transition: all 0.3s, visibility 0s;
-  border-radius: 10px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
-}
+  .ant-collapse > .ant-collapse-item > .ant-collapse-header {
+    position: relative;
+    padding: 10px 10px;
+    color: rgba(0, 0, 0, 0.85);
+    line-height: 1.5715;
+    cursor: pointer;
+    transition: all 0.3s, visibility 0s;
+    border-radius: 10px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+  }
 
-.ant-collapse > .ant-collapse-item:last-child > .ant-collapse-header {
-  position: relative;
-  padding: 10px 10px;
-  color: rgba(0, 0, 0, 0.85);
-  line-height: 1.5715;
-  cursor: pointer;
-  transition: all 0.3s, visibility 0s;
-  border-radius: 10px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
-}
+  .ant-collapse > .ant-collapse-item:last-child > .ant-collapse-header {
+    position: relative;
+    padding: 10px 10px;
+    color: rgba(0, 0, 0, 0.85);
+    line-height: 1.5715;
+    cursor: pointer;
+    transition: all 0.3s, visibility 0s;
+    border-radius: 10px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+  }
 
-.ant-collapse-content {
-  color: rgba(0, 0, 0, 0.85);
-  background-color: rgb(250, 250, 250);
-  border-top: 1px solid #d9d9d9;
-  border-radius: 0px 0px 10px 10px;
-}
+  .ant-collapse-content {
+    color: rgba(0, 0, 0, 0.85);
+    background-color: rgb(250, 250, 250);
+    border-top: 1px solid #d9d9d9;
+    border-radius: 0px 0px 10px 10px;
+  }
 
-.ant-collapse-content > .ant-collapse-content-box {
-  padding: 16px;
-}
+  .ant-collapse-content > .ant-collapse-content-box {
+    padding: 16px;
+  }
 
-.ant-collapse-item:last-child > .ant-collapse-content {
-  color: rgba(0, 0, 0, 0.85);
-  background-color: rgb(250, 250, 250);
-  border-top: 1px solid #d9d9d9;
-  border-radius: 0px 0px 10px 10px;
-}
+  .ant-collapse-item:last-child > .ant-collapse-content {
+    color: rgba(0, 0, 0, 0.85);
+    background-color: rgb(250, 250, 250);
+    border-top: 1px solid #d9d9d9;
+    border-radius: 0px 0px 10px 10px;
+  }
 
-.income {
-  background-color: rgb(221, 255, 221);
-  color: rgb(0, 255, 0);
-}
+  .income {
+    background-color: rgb(221, 255, 221);
+    color: rgb(0, 255, 0);
+  }
 
-.expense {
-  background-color: rgb(255, 221, 221);
-  color: rgb(255, 0, 0);
-}
+  .expense {
+    background-color: rgb(255, 221, 221);
+    color: rgb(255, 0, 0);
+  }
 
-.overall {
-  background-color: rgb(245, 245, 245);
-  color: rgb(53, 53, 53);
-}
+  .overall {
+    background-color: rgb(245, 245, 245);
+    color: rgb(53, 53, 53);
+  }
 
-.ant-input {
-  border-color: #e9e9e9;
-  border-right-width: 1px !important;
-  width: 40%;
-  border-radius: 10px 0px 0px 10px;
-  max-width: 200px;
-}
+  .ant-input {
+    border-color: #e9e9e9;
+    border-right-width: 1px !important;
+    width: 40%;
+    border-radius: 10px 0px 0px 10px;
+    max-width: 200px;
+  }
 
-.ant-input:hover {
-  border-color: #999999;
-  border-right-width: 1px !important;
-}
+  .ant-input:hover {
+    border-color: #999999;
+    border-right-width: 1px !important;
+  }
 
-.ant-input:active {
-  border-color: #c9c9c9;
-  border-right-width: 1px !important;
-}
+  .ant-input:active {
+    border-color: #c9c9c9;
+    border-right-width: 1px !important;
+  }
 
-.ant-btn {
-  border-radius: 0px 10px 10px 0px;
-  color: rgba(50, 50, 50, 1);
-  border-color: #d9d9d9;
-  background: #fff;
-  font-weight: 600;
-}
+  .ant-btn {
+    border-radius: 0px 10px 10px 0px;
+    color: rgba(50, 50, 50, 1);
+    border-color: #d9d9d9;
+    background: #fff;
+    font-weight: 600;
+  }
 
-.ant-btn:hover {
-  border-radius: 0px 10px 10px 0px;
-  color: rgba(50, 50, 50, 1);
-  border-color: #999999;
-}
+  .ant-btn:hover {
+    border-radius: 0px 10px 10px 0px;
+    color: rgba(50, 50, 50, 1);
+    border-color: #999999;
+  }
 
-.ant-typography {
-  color: rgba(0, 0, 0, 0.85);
-  overflow-wrap: break-word;
-  font-size: 16px;
-  margin-right: 6px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);
+  .ant-typography {
+    color: rgba(0, 0, 0, 0.85);
+    overflow-wrap: break-word;
+    font-size: 16px;
+    margin-right: 6px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);
+  }
 }
