--- a/src/styles/components/Budget.less
+++ b/src/styles/components/Budget.less
@@ -134,7 +134,7 @@
   h1.ant-typography {
     color: rgba(0, 0, 0, 0.85);
     overflow-wrap: break-word;
-    font-size: 14px;
+    font-size: 12px;
     margin-right: 6px;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);
     text-transform: uppercase;
@@ -146,6 +146,16 @@
     margin-top: 20px;
     background-color: rgb(255, 255, 255);
     border-radius: 10px 10px 10px 10px;
+  }
+
+  .ant-list-header {
+    top: 0;
+    width: 100%;
+    position: sticky;
+    background: rgb(46, 46, 46);
+    color: white;
+    border-radius: 10px 10px 0px 0px;
+    z-index: 1;
   }
 
   .ant-list-bordered .ant-list-item {
