--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -696,4 +696,20 @@
   .ant-list-sm .ant-list-item {
     padding: 0px 0px;
   }
+
+  .header-row {
+    width: 100%;
+    line-height: 25px;
+    text-align: right;
+    padding-right: 10px;
+  }
+
+  .header-item-name {
+    color: rgb(80, 80, 80);
+    font-size: 20px;
+  }
+  .header-item-date {
+    color: rgb(80, 80, 80);
+    font-size: 16px;
+  }
 }
