--- a/src/styles/components/Slider.less
+++ b/src/styles/components/Slider.less
@@ -42,9 +42,10 @@
 }
 
 .app-header {
-  width: 150px;
+  width: 100%;
   height: 50px;
   background-color: transparent;
+  display: block;
 
   .ant-menu-horizontal {
     line-height: 46px;
