--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -185,12 +185,12 @@
   .ant-btn-text {
     color: rgba(0, 0, 0, 0.85);
     border-color: transparent;
-    background: transparent;
+    background: rgb(250, 250, 250);
     box-shadow: none;
     &:hover {
       background-color: transparent !important;
       border-color: transparent !important;
-      background: transparent !important;
+      background: rgb(250, 250, 250) !important;
       color: @highlight-blue;
       box-shadow: none;
     }
@@ -199,12 +199,12 @@
   .ant-btn-text:focus {
     color: rgba(0, 0, 0, 0.85);
     border-color: transparent;
-    background: transparent;
+    background: rgb(250, 250, 250);
     box-shadow: none;
     &:hover {
-      background-color: transparent !important;
+      background-color: rgb(250, 250, 250) !important;
       border-color: transparent !important;
-      background: transparent !important;
+      background: rgb(250, 250, 250) !important;
       color: @highlight-blue;
       box-shadow: none;
     }
@@ -221,7 +221,6 @@
     font-size: 14px;
     background: transparent;
     border: 0;
-    font-weight: 500;
     font-size: large;
     outline: none;
     cursor: pointer;
@@ -252,13 +251,11 @@
   .ant-tabs-tab-btn {
     outline: none;
     color: @primary-blue;
-    font-weight: 400;
     font-size: larger;
   }
 
   .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
     color: @highlight-blue;
-    font-weight: 600;
   }
 
   .ant-tabs-top > .ant-tabs-nav .ant-tabs-ink-bar,
@@ -339,7 +336,7 @@
   .site-collapse-custom-collapse .site-collapse-custom-panel {
     margin-bottom: 0px;
     overflow: hidden;
-    background: #ffffff;
+    background: rgba(250, 250, 250);
     border: 0px;
     border-radius: 12px;
   }
@@ -476,6 +473,8 @@
 
   .ant-card-body {
     padding: 24px;
+    background-color: rgb(250, 250, 250);
+    border-radius: 10px 10px 10px 10px;
   }
 
   .ant-card-actions {
@@ -702,6 +701,7 @@
     line-height: 25px;
     text-align: right;
     padding-right: 10px;
+    background-color: rgb(250, 250, 250);
   }
 
   .header-item-name {
