--- a/src/styles/components/App.less
+++ b/src/styles/components/App.less
@@ -7,9 +7,21 @@
 }
 
 .site-layout .site-layout-background {
-  background: rgb(24, 132, 255);
+  background: rgb(250, 250, 250);
   padding: 0;
 }
 [data-theme="dark"] .site-layout .site-layout-background {
   background: #141414;
+}
+
+.ant-layout {
+  background: rgba(250, 250, 250) !important;
+}
+
+.ant-layout-content {
+  background: rgba(250, 250, 250) !important;
+}
+
+.ant-card {
+  background: rgb(250, 250, 250) !important;
 }
