--- a/src/styles/components/BlogDetail.css
+++ b/src/styles/components/BlogDetail.css
@@ -4,18 +4,21 @@
   margin: 0px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  padding: 5px;
+  padding: 4px;
+  background-color: rgb(255, 255, 255);
 }
 
 .blog-container {
   display: grid;
+  background-color: rgb(250, 250, 250);
   margin-top: 0px;
+  padding: 10px;
 }
 
 .blog-body-container {
   display: grid;
-  margin-left: 18px;
-  margin-right: 18px;
+  margin-left: 8px;
+  margin-right: 8px;
   color: rgb(55, 55, 55);
   height: fit-content;
 }
