--- a/src/styles/components/CalendarEvent.less
+++ b/src/styles/components/CalendarEvent.less
@@ -126,6 +126,10 @@
     padding: 0px 0px;
   }
 
+  .ant-card {
+    background: rgb(250, 250, 250);
+  }
+
   .ant-modal-header {
     padding: 16px 24px;
     color: #fff;
