--- a/src/styles/components/Event.less
+++ b/src/styles/components/Event.less
@@ -16,16 +16,15 @@
   }
 
   .ant-btn-secondary {
-    color: rgb(46, 46, 46);
-    background: white;
-    border-color: lightgray;
-    border: 1px solid lightgray;
-    border-radius: 0px;
-    box-shadow: none;
+    color: @primary-blue;
+    background: rgb(250, 250, 250);
+    border-color: @border-blue;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 4px 10px 0 rgba(0, 0, 0, 0.39);
     &:hover {
-      color: white;
-      background: rgb(61, 61, 61) !important;
-      border-color: rgb(199, 199, 199) !important;
+      background: @border-blue !important;
+      border-color: white !important;
+      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.4),
+        0 2px 4px 0 rgba(0, 0, 0, 0.39);
     }
   }
 
@@ -38,7 +37,7 @@
   .ant-btn-text {
     color: rgba(0, 0, 0, 0.85);
     border-color: transparent;
-    background: transparent;
+    background: rgb(250, 250, 250);
     box-shadow: none;
     &:hover {
       background-color: transparent !important;
@@ -52,7 +51,7 @@
   .ant-btn-text:focus {
     color: rgba(0, 0, 0, 0.85);
     border-color: transparent;
-    background: transparent;
+    background: rgb(250, 250, 250);
     box-shadow: none;
     &:hover {
       background-color: transparent !important;
@@ -73,11 +72,15 @@
     border-radius: 2px 2px 0 0;
   }
 
+  .ant-card {
+    background: rgb(250, 250, 250);
+  }
+
   .ant-card-body {
     padding-top: 0px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: rgb(255, 255, 255) !important;
+    background-color: rgb(250, 250, 250) !important;
   }
 
   .ant-card-bordered {
@@ -131,6 +134,7 @@
 
   .ant-card-cover img {
     margin-top: 10px;
+    border-radius: 0px 0px 0px 0px;
   }
 
   .title-gray {
