--- a/src/styles/components/SessionDetail.less
+++ b/src/styles/components/SessionDetail.less
@@ -54,7 +54,7 @@
   .ant-btn-text {
     color: rgba(0, 0, 0, 0.85);
     border-color: transparent;
-    background: transparent;
+    background: rgb(250, 250, 250);
     box-shadow: none;
     border-radius: 0px;
     width: 100%;
@@ -140,7 +140,7 @@
     padding-top: 0px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: rgb(255, 255, 255) !important;
+    background-color: rgb(250, 250, 250) !important;
   }
 
   .ant-card-bordered {
@@ -181,6 +181,7 @@
 
   .ant-card-cover img {
     margin-top: 10px;
+    border-radius: 0px 0px 0px 0px;
   }
 
   .ant-checkbox-checked .ant-checkbox-inner {
