--- a/src/styles/components/index.less
+++ b/src/styles/components/index.less
@@ -8,6 +8,7 @@ body {
   max-width: 1080px;
   margin: 0 auto !important;
   float: none !important;
+  background: rgb(250, 250, 250) !important;
 }
 
 @media (max-width: 768px) {
