My Calendar View Added

--- a/src/styles/components/BlogList.less
+++ b/src/styles/components/BlogList.less
@@ -117,16 +117,17 @@
     left: calc(100% - 18px - 35px);
   }
 
-  .ant-modal-content {
-    border-radius: 20px;
-  }
-
   .ant-modal-body {
     padding: 16px;
     font-size: 14px;
     line-height: 1.5715;
     word-wrap: break-word;
     justify-content: center;
+    background-color: rgb(250, 250, 250);
+  }
+
+  .ant-modal-footer {
+    background-color: rgb(250, 250, 250);
   }
 
   .ant-modal-header {
