--- a/src/styles/components/SessionDetail.less
+++ b/src/styles/components/SessionDetail.less
@@ -112,6 +112,7 @@
     font-size: 14px;
     line-height: 1.5715;
     word-wrap: break-word;
+    background-color: rgb(250, 250, 250);
   }
 
   .ant-modal-header {
