--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -27,6 +27,7 @@
     line-height: 1.5715;
     word-wrap: break-word;
     justify-content: center;
+    background-color: rgb(250, 250, 250);
   }
 
   .ant-modal-confirm .ant-modal-confirm-btns {
@@ -297,6 +298,7 @@
     line-height: 1.5715;
     word-wrap: break-word;
     justify-content: center;
+    background-color: rgb(250, 250, 250);
   }
 
   .ant-modal-header {
@@ -305,6 +307,10 @@
     background: #4694b4;
     border-bottom: #4694b4;
     box-shadow: 0px 4px 6px #525252;
+  }
+
+  .ant-modal-footer {
+    background-color: rgb(250, 250, 250);
   }
 
   h2.ant-typography,
