--- a/src/styles/components/Shop.less
+++ b/src/styles/components/Shop.less
@@ -60,6 +60,7 @@
     font-size: 14px;
     line-height: 1.5715;
     word-wrap: break-word;
+    background-color: rgb(250, 250, 250);
   }
 
   .custom-btn {
@@ -117,11 +118,12 @@
     font-size: 14px;
     line-height: 1.5715;
     word-wrap: break-word;
+    background-color: rgb(250, 250, 250);
   }
 
   .ant-modal-content {
     position: relative;
-    background-color: #fff;
+    background-color: rgb(250, 250, 250);
     background-clip: padding-box;
     border: 0;
     border-radius: 2px;
