--- a/src/styles/components/TestList.less
+++ b/src/styles/components/TestList.less
@@ -7,6 +7,7 @@
     line-height: 1.5715;
     word-wrap: break-word;
     justify-content: center;
+    background-color: rgb(250, 250, 250);
   }
 
   .ant-modal-confirm .ant-modal-confirm-btns {
@@ -318,6 +319,11 @@
     line-height: 1.5715;
     word-wrap: break-word;
     justify-content: center;
+    background-color: rgb(250, 250, 250);
+  }
+
+  .ant-modal-footer {
+    background-color: rgb(250, 250, 250);
   }
 
   .ant-modal-header {
